--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="script.js"></script>
-  </body>
+  <title>Web Dev Simplified - Blog</title>
+</head>
+<body>
+  <header>
+    <h1>Web Dev Simplified Blog</h1>
+  </header>
+  <main>
+    <section>
+      <article>
+        <h2>Semantic Versioning Explained</h2>
+        <div>March 1st, 2020</div>
+        <div>Kyle Cook</div>
+        <p>An explanation of what semantic versioning is and why it is important.</p>
+        <a href="#">Read More</a>
+      </article>
+      <article>
+        <h2>The Forgotten React Renderer - React Portal</h2>
+        <div>February 23rd, 2020</div>
+        <div>Kyle Cook</div>
+        <p>React portal lets components be rendered outside their parent component which is incredibly useful in specific scenarios explained in depth in this article.</p>
+        <a href="#">Read More</a>
+      </article>
+    </section>
+  </main>
+  <footer>
+    All articles are original and written specifically for Web Dev Simplified.
+  </footer>
+</body>
 </html>
